[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/ui/Parallax.gd" type="Script" id=1]
[ext_resource path="res://assets/visual/bg/fantasy/Fantasy 2/2048 x 1536/fantasy-2048-x-1536_full.png" type="Texture" id=2]
[ext_resource path="res://scripts/UI/SettingMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/visual/ui/wood_pack/button_icon_set/TEXT BTN  before.png" type="Texture" id=4]
[ext_resource path="res://assets/visual/ui/wood_pack/button_icon_set/TEXT BTN  empty.png" type="Texture" id=5]
[ext_resource path="res://assets/visual/ui/wood_pack/button_icon_set/TEXT BTN  quit.png" type="Texture" id=6]

[node name="ParallaxBackground" type="ParallaxBackground"]
script = ExtResource( 1 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.5, 0.5 )

[node name="BG" type="Sprite" parent="ParallaxLayer"]
position = Vector2( 969.249, 539.243 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 1.92e+007, 1080 )

[node name="MainMenu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.18372
margin_top = -160.344
margin_right = 637.184
margin_bottom = 365.656
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
margin_left = 120.0
margin_top = 80.0
margin_right = 1794.0
margin_bottom = 1166.0

[node name="MenuOptions" type="VBoxContainer" parent="MainMenu/VBoxContainer"]
margin_right = 1674.0
margin_bottom = 1086.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="BackButton" type="TextureButton" parent="MainMenu/VBoxContainer/MenuOptions"]
margin_top = 360.0
margin_right = 1674.0
margin_bottom = 462.0
texture_normal = ExtResource( 4 )

[node name="SettingsButton" type="TextureButton" parent="MainMenu/VBoxContainer/MenuOptions"]
margin_top = 492.0
margin_right = 1674.0
margin_bottom = 594.0
texture_normal = ExtResource( 5 )

[node name="QuitButton" type="TextureButton" parent="MainMenu/VBoxContainer/MenuOptions"]
margin_top = 624.0
margin_right = 1674.0
margin_bottom = 726.0
texture_normal = ExtResource( 6 )

